removed padding on banner to get rid of mobile clipping issue

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -142,6 +142,7 @@ $navbar-default-link-active-bg:            darken($navbar-default-bg, $darkenAmo
   padding:0px;
   .container{
     min-height:5px;
+    padding:0px;
   }
 }
 
